<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currencyListSearchLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:endIconDrawable="@drawable/ic_search"
        app:endIconMode="custom"
        app:layout_constraintEnd_toStartOf="@id/currencyListFilterButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeActionLabel="Pesquisar"
            android:imeOptions="actionSearch"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/currencyListFilterButton"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/filter"
        app:layout_constraintBottom_toBottomOf="@id/currencyListSearchLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/currencyListSearchLayout"
        app:srcCompat="@drawable/ic_filter_list" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/currencyListRecyclerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currencyListSearchLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/currencyListRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/currencyListErrorGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="currencyListErrorMessage,currencyListErrorButton" />

    <TextView
        android:id="@+id/currencyListErrorMessage"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currencyListSearchLayout" />

    <Button
        android:id="@+id/currencyListErrorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/try_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currencyListErrorMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>